--- a/public/login.html
+++ b/public/login.html
@@ -23,13 +23,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="header_wrap">
+      <div id="header_wrap">
         <header-component></header-component>
       </div>
       <main>
         <div class="main_wrap">
           <div class="login_wrap">
-            <h1>NeedU에 오신걸 환영합니다.</h1>
+            <h1>사회복지기관 리뷰 플랫폼 NEEDU</h1>
             <div class="login_box" id="form_login_user">
               <div class="login_input_wrap">
                 <form id="form_user" method="post" action="/login">
