--- a/public/signup.html
+++ b/public/signup.html
@@ -82,19 +82,19 @@
             </div>
             <div class="join_input">
               <input type="checkbox" name= "check_2" id="check_2" required>
-              <label for="check_2">(필수) 개인 회원 약관에 동의</label><span class="material-symbols-outlined">arrow_forward_ios</span>
+              <label for="check_2">(필수) 개인 회원 약관에 동의</label><span class="material-symbols-outlined"><a href="https://neighborly-arithmetic-8e6.notion.site/NEEDU-2023-08-06-850d2be0329c403daf4377ade286c4a1?pvs=4" target="_blank">arrow_forward_ios</a></span>
             </div>
             <div class="join_input">
               <input type="checkbox" name= "check_3" id="check_3" required>
-              <label for="check_3">(필수) 개인정보 수집 및 이용에 동의</label><span class="material-symbols-outlined">arrow_forward_ios</span>
+              <label for="check_3">(필수) 개인정보 수집 및 이용에 동의</label><span class="material-symbols-outlined"><a href="https://neighborly-arithmetic-8e6.notion.site/d262bf0970b143fa97cfb93552a1b33f?pvs=4" target="_blank">arrow_forward_ios</a></span>
             </div>
             <div class="join_input join_input2">
               <input type="checkbox" name= "check_4" id="check_4">
-              <label for="check_4">(선택) 마케팅 정보 수신 동의 - 이메일</label><span class="material-symbols-outlined">arrow_forward_ios</span>
+              <label for="check_4">(선택) 마케팅 정보 수신 동의 - 이메일</label><span class="material-symbols-outlined"><a href="https://neighborly-arithmetic-8e6.notion.site/5a691a0824ad4f0180ac55e076da44d7?pvs=4" target="_blank">arrow_forward_ios</a></span>
             </div>
             <div class="join_input join_input2">
               <input type="checkbox" name= "check_5" id="check_5">
-              <label for="check_5">(선택) 마케팅 정보 수신 동의 - SMS/MMS</label><span class="material-symbols-outlined">arrow_forward_ios</span>
+              <label for="check_5">(선택) 마케팅 정보 수신 동의 - SMS/MMS</label><span class="material-symbols-outlined"><a href="https://neighborly-arithmetic-8e6.notion.site/sms-9de40b40848d4b19a0a36440941da5b3?pvs=4" target="_blank">arrow_forward_ios</a></span>
             </div>
           </div>
           <div class="join_radio">
