--- a/public/write_search.html
+++ b/public/write_search.html
@@ -28,10 +28,10 @@
 			</div>
       <main>
 				<div class="main_wrap">
-					<h1>리뷰를 남기실 기관을 검색해주세요.</h1>
+					<h1>어떤 기관의 리뷰를 남기고 싶나요?</h1>
 					<form id="search_corp" class="search" method="get" action="/review/write/corp/:name">
 						<div class="user_input">
-							<input type ="text" id="search_input" placeholder="기관명을 입력해주세요." autocomplete="off">
+							<input type ="text" id="search_input" placeholder="어떤 기관을 찾고 있나요?" autocomplete="off">
 							<ul class="auto_corp" style="display: none;">
 							</ul>	
 							<div class="register" style="display: none;">
