fix: sidebar 수정

--- a/public/main.html
+++ b/public/main.html
@@ -129,37 +129,37 @@
                 <ul class="detail-top5-details">
                   <li style="display: none;">
                     <p>성장 가능성</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_growth*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>리더십</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_leadership*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>급여 및 복지</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_reward*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>일 가치감</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_worth*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>사내 문화</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_culture*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>워라밸</p>
-                    <div class="star_bg" style="background: none;">
+                    <div class="star_bg">
                       <span style="width: {{detail.avg_worklife*20}}%"></span>
                     </div>
                   </li>
