fix: 디자인 일부 수정

--- a/public/main.html
+++ b/public/main.html
@@ -102,12 +102,12 @@
         <div>
           <div>
             <ul class="details">
-              <li class="select-detail"><button value="avg_growth">성장 가능성</button></li>
-              <li><button value="avg_leadership" >리더십</button></li>
-              <li><button value="avg_reward">급여 및 복지</button></li>
-              <li><button value="avg_worth">일 가치감</button></li>
-              <li><button value="avg_culture">사내 문화</button></li>
-              <li><button value="avg_worklife">워라밸</button></li>
+              <li class="select-detail"><img src="/styles/images/ico_growth.svg"><button value="avg_growth">성장 가능성</button></li>
+              <li><img src="/styles/images/ico_leadership.svg"><button value="avg_leadership">리더십</button></li>
+              <li><img src="/styles/images/ico_reward.svg"><button value="avg_reward">급여 및 복지</button></li>
+              <li><img src="/styles/images/ico_growth.svg"><button value="avg_worth">일 가치감</button></li>
+              <li><img src="/styles/images/ico_culture.svg"><button value="avg_culture">사내 문화</button></li>
+              <li><img src="/styles/images/ico_worklife.svg"><button value="avg_worklife">워라밸</button></li>
             </ul>
           </div>
           <ul class="detail-top5">
