--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -219,7 +219,7 @@
 										</div>	
 									</div>
 									<button type="button" class="comment_like" onclick="likesClick(this)">
-										<span></span>
+										<img src="/styles/images/like.png">
 										<span>도움이 돼요</span>
 										<span>(<span>{{content.likes}}</span>)</span>
 									</button>
