--- a/public/review_search.html
+++ b/public/review_search.html
@@ -207,6 +207,7 @@
               </div>
             </fieldset>
             <button type="button" class="btn-filter" onclick="filter_active()">
+              <span>상세검색</span>
               <img class="filter-black" src="/styles/images/btn_filter.png">
               <img class="filter-blue" src="/styles/images/btn_filter_blue.png" style="display: none;">
             </button>
