feat: 베타테스트 최종

--- a/public/login.html
+++ b/public/login.html
@@ -51,7 +51,7 @@
             </div>
             <div class="to_signup">아직 회원이 아니신가요?<a href="/signup">회원가입</a></div>
           </div>
-          <div class="ad_wrap mo_none pc_show">
+          <div class="ad_wrap mo_none pc_show" style="display: none;">
             <div class="ad">광고배너</div>
           </div>
         </div>      
