--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,8 @@
             </div>
             <div class="to_signup">아직 회원이 아니신가요?<a href="/signup">회원가입</a></div>
           </div>
-          <div class="ad_wrap mo_none pc_show" style="display: none;">
-            <div class="ad">광고배너</div>
+          <div class="ad_wrap mo_none pc_show">
+            <!-- <img class="ad" src="/styles/images/needU_login_banner.jpg" alt="광고배너"> -->
           </div>
         </div>      
       </main>
