fix: 보완사항 수정

--- a/public/mypage_profile.html
+++ b/public/mypage_profile.html
@@ -172,7 +172,7 @@
           </form>
           {% endfor %}
         </div>
-        <div class="career-contents career-write">
+        <div class="career-contents career-write" style="display: none;">
           <form id="career-write" class="career-content" method="post" action="/mypage/add/career" onsubmit="return addCareer(event)">
             <fieldset>
               <div class="career-item career-corpname">
