--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -191,11 +191,11 @@
 									</div>
 									<div class="pros_cons">
 										<p>장점</p>
-										<p>{{content.pros}}</p>
+										<p>{{content.pros.replace('\n', '<br>') | safe}}</p>
 									</div>
 									<div class="pros_cons">
 										<p>단점</p>
-										<p>{{content.cons}}</p>
+										<p>{{content.cons.replace('\n', '<br>') | safe}}</p>
 									</div>
 									<div class="comment_hashtag_wrap">
 										<div class="hashtag_fade"></div>
@@ -238,9 +238,9 @@
 								<p>{{review.Corp_name}}</p>
 								<div>
 									<div class="star_bg">
-										<span style="width: {{review.avg_total*20}}%"></span>
+										<span style="width: {{review.total_score*20}}%"></span>
 									</div>
-									<span>{{review.avg_total}}</span>
+									<span>{{review.total_score}}</span>
 									{% if review.last_date == '9999-12' %}
 									<span>현직원</span>
 									{% else %}
