--- a/public/main.html
+++ b/public/main.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0">
   <meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
   <meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/39be237d-699c-42fc-aa1b-8b3e4fe22cfe"/>
+  <!--   네이버 서치어드바이저 인증 -->
+  <meta name="naver-site-verification" content="489dd530adf48381d5828c84bccf0503988cf7d1" />
   <link rel="icon" href="/styles/images/favicon.svg">
   <title>NeedU</title>
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
