feat: 리뷰이벤트 배너 추가

--- a/public/main.html
+++ b/public/main.html
@@ -108,12 +108,14 @@
           </div>
         </div>
       </section>
-      <div class="top-score-banner" onclick="location.href='/review/write'">
+      <div class="event-banner" onclick="window.open('https://forms.gle/WsZMFPrGcLv9Y9X2A')">
+      </div>
+      <!-- <div class="top-score-banner" onclick="location.href='/review/write'">
         <p>지금 후기 작성하면 전체 리뷰 확인 가능</p>
         <p>별점 주고 후기 보러가기</p>
         <img src="/styles/images/cta_arrow.svg">
         <span class="ts-banner-img"></span>
-      </div>
+      </div> -->
       <section class="second-contents">
         <h1>항목별 Top5</h1>
         <div>
