feat: 리뷰작성 안내문구 추가

--- a/public/write_detail.html
+++ b/public/write_detail.html
@@ -65,7 +65,11 @@
 				</div>
 				<div class="contents_wrap">
 					<div class="contents">
-						<p>입력하신 모든 정보는 익명으로 처리됩니다.</p>
+						<p style="line-height: 1.5;">
+							입력하신 모든 정보는 익명으로 처리됩니다.<br>
+							NEEDU <a href="https://neighborly-arithmetic-8e6.notion.site/NEEDU-d7cb722b6a6247d38594aff27c31c036?pvs=4" target="_blank" style="color: blue; font-weight:700">운영가이드</a>에 위배 되는 리뷰는 운영자에 의해 조치될 수 있습니다.<br>
+							<span style="color: red;">(주의)</span> 특정인을 향한 비방, 욕설은 법적인 문제가 발생할 수 있습니다.<br>
+						</p>
 						<form class="review_form" id="review_form" method="post" action="/review/write/corp/{{Corp.name}}" onsubmit="return confirmSubmit()">
 							<div class="working_info">
 								<div class="period">
