--- a/public/main.html
+++ b/public/main.html
@@ -1,210 +1,297 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0">
-  <meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
-  <meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/ff518c60-5d82-429e-befa-370ec59e3e52"/>
-  <!--   네이버 서치어드바이저 인증 -->
-  <meta name="naver-site-verification" content="489dd530adf48381d5828c84bccf0503988cf7d1" />
-  <link rel="icon" href="/styles/images/favicon.svg">
-  <title>NeedU</title>
-  <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
-  <link href="/styles/webcomponent.css" rel="stylesheet">
-  <link href="/styles/main.css" rel="stylesheet">
-  <!-- SWIPER 외부 라이브러리 연결-->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-G5XZB713D0');
-  </script>
-</head>
-<body>
-  <div class="container">
-    <a href="https://neighborly-arithmetic-8e6.notion.site/NEEDU-d7cb722b6a6247d38594aff27c31c036?pvs=4" target="_blank">
-      <div class="top-banner">
-        <div class="top-banner-text">
-          <p><strong>NEEDU</strong>는 이렇게 이용합니다.</p>
-          <p>(필독)커뮤니티 운영 가이드 보러가기</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0"
+    />
+    <meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU" />
+    <meta
+      property="og:image"
+      content="https://github.com/Code-KHJ/Needu/assets/124508326/ff518c60-5d82-429e-befa-370ec59e3e52"
+    />
+    <!--   네이버 서치어드바이저 인증 -->
+    <meta
+      name="naver-site-verification"
+      content="489dd530adf48381d5828c84bccf0503988cf7d1"
+    />
+    <link rel="icon" href="/styles/images/favicon.svg" />
+    <title>NeedU</title>
+    <link href="/styles/style_reset.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/webcomponent.css" rel="stylesheet" />
+    <link href="/styles/main.css" rel="stylesheet" />
+    <!-- SWIPER 외부 라이브러리 연결-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-G5XZB713D0');
+    </script>
+  </head>
+  <body>
+    <div class="container">
+      <a
+        href="https://neighborly-arithmetic-8e6.notion.site/NEEDU-d7cb722b6a6247d38594aff27c31c036?pvs=4"
+        target="_blank"
+      >
+        <div class="top-banner">
+          <div class="top-banner-text">
+            <p><strong>NEEDU</strong>는 이렇게 이용합니다.</p>
+            <p>(필독)커뮤니티 운영 가이드 보러가기</p>
+          </div>
+          <img src="/styles/images/cta_arrow.svg" />
         </div>
-        <img src="/styles/images/cta_arrow.svg">
+      </a>
+      <div id="header_wrap">
+        <header-component data-name="{{User.nickname}}"></header-component>
       </div>
-    </a>
-    <div id="header_wrap">
-      <header-component data-name="{{User.nickname}}"></header-component>
-    </div>
-    <main>
-      <section class="banner">
-        <div class="banner-search">
-          <h1>사회복지기관 리뷰</h1>
-          <div>
-            <P>전⋅현직자들의 생생한 리뷰,</P>
-            <P>NEEDU에서 만나보세요!</P>
-          </div>
-          <form class="search" id="search" method="get" action="review/search">
-            <fieldset>
-              <div class="user-input">
-                <label><select name="city" id="city1"></select></label>              
-                <input placeholder="어떤 기관을 찾고 있나요?" type="text" name="corp_name" id="search_input">
-              </div>
-              <button form="search" id="btnSubmit" onclick="submit()"></button>
-            </fieldset>
-          </form>
-        </div>
-        <div class="banner-image"></div>
-      </section>
-      <section class="first-contents">
-        <div class="recent-reviews">
-          <h1>최근 리뷰</h1>
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              {% for review_item in review.slice(0,10) %}
-              <div class="review swiper-slide">
-                <div>
-                  <span class="review-corpname">{{review_item.Corp_name.slice(0,12)}}</span>
-                  {% if review_item.last_date == '9999-12' %}
-                  <span class="mo_none tab_show">현직원</span>
-                  {% else %}
-                  <span class="mo_none tab_show">전직원</span>
-                  {% endif %}                
-                  <span class="mo_none tab_show">{{review_item.date}}</span>  
-                </div>
-                <p>{{review_item.highlight}}</p>
-                <button type="button" onclick="checkLimit('{{review_item.Corp_name}}')">더보기</button>
-              </div>
-              {% endfor %}  
+      <main>
+        <section class="banner">
+          <div class="banner-search">
+            <h1>사회복지기관 리뷰</h1>
+            <div>
+              <p>전⋅현직자들의 생생한 리뷰,</p>
+              <p>NEEDU에서 만나보세요!</p>
             </div>
+            <form
+              class="search"
+              id="search"
+              method="get"
+              action="review/search"
+            >
+              <fieldset>
+                <div class="user-input">
+                  <label><select name="city" id="city1"></select></label>
+                  <input
+                    placeholder="어떤 기관을 찾고 있나요?"
+                    type="text"
+                    name="corp_name"
+                    id="search_input"
+                  />
+                </div>
+                <button
+                  form="search"
+                  id="btnSubmit"
+                  onclick="submit()"
+                ></button>
+              </fieldset>
+            </form>
           </div>
-        </div>
-        <div class="top-score">
-          <h1>별점 상위</h1>
-          <div class="top-score-contents">
-            {% for top in top10.slice(0,6) %}
-            <div class="top-score-item top1" onclick="checkLimit('{{top.name}}')">
-              {% if loop.index == 1 %}
-              <img src="/styles/images/ico_gold.svg">
-              {% elseif loop.index == 2 %}
-              <img src="/styles/images/ico_silver.svg">
-              {% elseif loop.index == 3 %}
-              <img src="/styles/images/ico_blonze.svg">
-              {% endif %}
-              <div>{{top.name.slice(0,2)}}</div>
-              <div>
-                <div class="ts-item-detail">
-                  <p>{{top.name}}</p>
-                  <p>{{top.city}} {{top.gugun}}</p>
-                  <div class="star_bg">
-                    <span style="width: {{top.avg_total*20}}%"></span>
+          <div class="banner-image"></div>
+        </section>
+        <section class="first-contents">
+          <div class="recent-reviews">
+            <h1>최근 리뷰</h1>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                {% for review_item in review.slice(0,10) %}
+                <div class="review swiper-slide">
+                  <div>
+                    <span class="review-corpname"
+                      >{{review_item.Corp_name.slice(0,12)}}</span
+                    >
+                    {% if review_item.last_date == '9999-12' %}
+                    <span class="mo_none tab_show">현직원</span>
+                    {% else %}
+                    <span class="mo_none tab_show">전직원</span>
+                    {% endif %}
+                    <span class="mo_none tab_show">{{review_item.date}}</span>
                   </div>
+                  <p>{{review_item.highlight}}</p>
+                  <button
+                    type="button"
+                    onclick="checkLimit('{{review_item.Corp_name}}')"
+                  >
+                    더보기
+                  </button>
                 </div>
-                <span>{{top.avg_total}}</span>
+                {% endfor %}
               </div>
             </div>
-            {% endfor %}
           </div>
-        </div>
-      </section>
-      <div class="event-banner" onclick="window.open('https://forms.gle/WsZMFPrGcLv9Y9X2A')">
-      </div>
-      <!-- <div class="top-score-banner" onclick="location.href='/review/write'">
+          <div class="top-score">
+            <h1>별점 상위</h1>
+            <div class="top-score-contents">
+              {% for top in top10.slice(0,6) %}
+              <div
+                class="top-score-item top1"
+                onclick="checkLimit('{{top.name}}')"
+              >
+                {% if loop.index == 1 %}
+                <img src="/styles/images/ico_gold.svg" />
+                {% elseif loop.index == 2 %}
+                <img src="/styles/images/ico_silver.svg" />
+                {% elseif loop.index == 3 %}
+                <img src="/styles/images/ico_blonze.svg" />
+                {% endif %}
+                <div>{{top.name.slice(0,2)}}</div>
+                <div>
+                  <div class="ts-item-detail">
+                    <p>{{top.name}}</p>
+                    <p>{{top.city}} {{top.gugun}}</p>
+                    <div class="star_bg">
+                      <span style="width: {{top.avg_total*20}}%"></span>
+                    </div>
+                  </div>
+                  <span>{{top.avg_total}}</span>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+        </section>
+        <div
+          class="event-banner"
+          onclick="window.open('https://forms.gle/WsZMFPrGcLv9Y9X2A')"
+        ></div>
+        <!-- <div class="top-score-banner" onclick="location.href='/review/write'">
         <p>지금 후기 작성하면 전체 리뷰 확인 가능</p>
         <p>별점 주고 후기 보러가기</p>
         <img src="/styles/images/cta_arrow.svg">
         <span class="ts-banner-img"></span>
       </div> -->
-      <section class="second-contents">
-        <h1>항목별 Top5</h1>
-        <div>
+        <section class="second-contents">
+          <h1>항목별 Top5</h1>
           <div>
-            <ul class="details">
-              <li class="select-detail"><img src="/styles/images/ico_growth.svg"><button value="avg_growth">성장 가능성</button></li>
-              <li><img src="/styles/images/ico_leadership.svg"><button value="avg_leadership">리더십</button></li>
-              <li><img src="/styles/images/ico_reward.svg"><button value="avg_reward">급여 및 복지</button></li>
-              <li><img src="/styles/images/ico_worth.svg"><button value="avg_worth">일 가치감</button></li>
-              <li><img src="/styles/images/ico_culture.svg"><button value="avg_culture">사내 문화</button></li>
-              <li><img src="/styles/images/ico_worklife.svg"><button value="avg_worklife">워라밸</button></li>
-            </ul>
-          </div>
-          <ul class="detail-top5">
-            {% for detail in detail10.slice(0,5) %}
-            <li class="detail-top5-item" onclick="checkLimit('{{detail.name}}')">
-              <div class="detail-top5-no">{{loop.index}}</div>
-              <div class="detail-top5-content">
-                <div class="detail-top5-corp">
-                  <p>{{detail.name.slice(0,12)}}</p>
-                  <p>{{detail.city}} {{detail.gugun}}</p>
-                </div>
-                <div class="detail-top5-highlight">
-                  <p>성장 가능성</p>
-                  <div>
-                    <img src="/styles/images/Star_1.png">
-                    <span>{{detail.avg_growth}}</span>
+            <div>
+              <ul class="details">
+                <li class="select-detail">
+                  <img src="/styles/images/ico_growth.svg" /><button
+                    value="avg_growth"
+                  >
+                    성장 가능성
+                  </button>
+                </li>
+                <li>
+                  <img src="/styles/images/ico_leadership.svg" /><button
+                    value="avg_leadership"
+                  >
+                    리더십
+                  </button>
+                </li>
+                <li>
+                  <img src="/styles/images/ico_reward.svg" /><button
+                    value="avg_reward"
+                  >
+                    급여 및 복지
+                  </button>
+                </li>
+                <li>
+                  <img src="/styles/images/ico_worth.svg" /><button
+                    value="avg_worth"
+                  >
+                    일 가치감
+                  </button>
+                </li>
+                <li>
+                  <img src="/styles/images/ico_culture.svg" /><button
+                    value="avg_culture"
+                  >
+                    사내 문화
+                  </button>
+                </li>
+                <li>
+                  <img src="/styles/images/ico_worklife.svg" /><button
+                    value="avg_worklife"
+                  >
+                    워라밸
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <ul class="detail-top5">
+              {% for detail in detail10.slice(0,5) %}
+              <li
+                class="detail-top5-item"
+                onclick="checkLimit('{{detail.name}}')"
+              >
+                <div class="detail-top5-no">{{loop.index}}</div>
+                <div class="detail-top5-content">
+                  <div class="detail-top5-corp">
+                    <p>{{detail.name.slice(0,12)}}</p>
+                    <p>{{detail.city}} {{detail.gugun}}</p>
                   </div>
-                </div>
-                <ul class="detail-top5-details">
-                  <li style="display: none;">
+                  <div class="detail-top5-highlight">
                     <p>성장 가능성</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_growth*20}}%"></span>
+                    <div>
+                      <img src="/styles/images/Star_1.png" />
+                      <span>{{detail.avg_growth}}</span>
                     </div>
-                  </li>
-                  <li>
-                    <p>리더십</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_leadership*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>급여 및 복지</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_reward*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>일 가치감</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_worth*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>사내 문화</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_culture*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>워라밸</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_worklife*20}}%"></span>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            {% endfor %}
-          </ul>
-          <button class="back"><span></span></button>
-          <button class="next"><span></span></button>
-        </div>
-      </section>
-    </main>
-    <login-modal></login-modal>
-  </div>
-  <footer>
-    <footer-component></footer-component>
-  </footer>
-  <totop-component></totop-component>
-  <script type="module" src="/js/webcomponent.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
-  <script defer src="/js/main.js"></script>
-  <script defer src="/js/modules.js"></script>
-</body>
+                  </div>
+                  <ul class="detail-top5-details">
+                    <li style="display: none">
+                      <p>성장 가능성</p>
+                      <div class="star_bg">
+                        <span style="width: {{detail.avg_growth*20}}%"></span>
+                      </div>
+                    </li>
+                    <li>
+                      <p>리더십</p>
+                      <div class="star_bg">
+                        <span
+                          style="width: {{detail.avg_leadership*20}}%"
+                        ></span>
+                      </div>
+                    </li>
+                    <li>
+                      <p>급여 및 복지</p>
+                      <div class="star_bg">
+                        <span style="width: {{detail.avg_reward*20}}%"></span>
+                      </div>
+                    </li>
+                    <li>
+                      <p>일 가치감</p>
+                      <div class="star_bg">
+                        <span style="width: {{detail.avg_worth*20}}%"></span>
+                      </div>
+                    </li>
+                    <li>
+                      <p>사내 문화</p>
+                      <div class="star_bg">
+                        <span style="width: {{detail.avg_culture*20}}%"></span>
+                      </div>
+                    </li>
+                    <li>
+                      <p>워라밸</p>
+                      <div class="star_bg">
+                        <span style="width: {{detail.avg_worklife*20}}%"></span>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              {% endfor %}
+            </ul>
+            <button class="back"><span></span></button>
+            <button class="next"><span></span></button>
+          </div>
+        </section>
+      </main>
+      <login-modal></login-modal>
+    </div>
+    <footer>
+      <footer-component></footer-component>
+    </footer>
+    <totop-component></totop-component>
+    <script type="module" src="/js/webcomponent.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
+    <script defer src="/js/main.js"></script>
+    <script defer src="/js/modules.js"></script>
+  </body>
 </html>
