fix: footer, chat 퍼블리싱 수정

--- a/public/chat_complete.html
+++ b/public/chat_complete.html
@@ -37,38 +37,31 @@
           <h1>니쥬챗 신청 정보</h1>
           <div class="info-box">
             <div class="item">
-              <div>멘토링명</div>
-              <div>|</div>
+              <div>니쥬챗명</div>
               <div>멘토링 제목입니다asdfashdlfhwlkfwekl</div>
             </div>
             <div class="item">
-              <div>멘토</div>
-              <div>|</div>
+              <div>호스트</div>
               <div>김현준</div>
             </div>
             <div class="item">
               <div>닉네임</div>
-              <div>|</div>
               <div>hyunjun00</div>
             </div>
             <div class="item">
               <div>연락처</div>
-              <div>|</div>
               <div>010-4674-2754</div>
             </div>
             <div class="item">
               <div>이메일</div>
-              <div>|</div>
               <div>needu.sw@gmail.com</div>
             </div>
             <div class="item">
               <div>예약일정</div>
-              <div>|</div>
               <div>2023년 11월 11일 17시</div>
             </div>
             <div class="item">
               <div>멘토에게 남기는 말</div>
-              <div>|</div>
               <div>이력서 첨삭 해주세요</div>
             </div>
           </div>
@@ -76,8 +69,7 @@
             <h1>입금안내</h1>
             <div class="payment-content">
               <img src="/styles/images/ico_triangle.png" style="width: 20px" />
-              <span>멘토링비: </span>
-              <span>30,000원</span>
+              <span>멘토링비: 30,000원</span>
             </div>
             <p>
               * 쿠폰을 등록하셨을 경우 별도로 입금하지 않으셔도 납부완료로
@@ -85,8 +77,7 @@
             </p>
             <div class="payment-content">
               <img src="/styles/images/ico_triangle.png" style="width: 20px" />
-              <span>계좌번호: </span>
-              <span>카카오뱅크 3333-28-5487059(김현준)</span>
+              <span>계좌번호: 카카오뱅크 3333-28-5487059(김현준)</span>
             </div>
             <div class="payment-content">
               <img src="/styles/images/ico_triangle.png" style="width: 20px" />
