--- a/public/chat_complete.html
+++ b/public/chat_complete.html
@@ -42,7 +42,7 @@
             </div>
             <div class="item">
               <div>호스트</div>
-              <div></div>
+              <div>호스트연동필요</div>
             </div>
             <div class="item">
               <div>닉네임</div>
