feat: gnb chat 추가, 배너 추가

--- a/public/chat_reserve.html
+++ b/public/chat_reserve.html
@@ -57,5 +57,6 @@
       <footer-component></footer-component>
     </footer>
     <script type="module" src="/js/webcomponent.js"></script>
+    <script defer src="/js/chat_reserve.js"></script>
   </body>
 </html>
