--- a/public/main.html
+++ b/public/main.html
@@ -156,7 +156,8 @@
         </section>
         <div
           class="event-banner"
-          onclick="window.open('https://forms.gle/WsZMFPrGcLv9Y9X2A')"
+          onclick="window.open('https://needu.oopy.io')"
+          style="display: none"
         ></div>
         <!-- <div class="top-score-banner" onclick="location.href='/review/write'">
         <p>지금 후기 작성하면 전체 리뷰 확인 가능</p>
